# cc-audio-input

./: .gitignore  CLAUDE.md  Cargo.toml  DEV_EXPERIENCE.md  PLAN.md  README.md  RESEARCH.md  build_release.bat  download_model.bat  hotwords.yaml  models.yaml  settings.example.json  setup.bat
.github/workflows/: ci.yml  release.yml
assets/: hotwords.yaml
src/: asr_engine.rs  clipboard_paste.rs  config.rs  corrector.rs  cursor.rs  device_selector.rs  hotkey.rs  hotwords.rs  main.rs  recorder.rs  tray.rs  trigger.rs
