[package]
name = "audio-input"
version = "0.7.0"
edition = "2021"
description = "Voice + LLM CLI prompt input — hold left mouse 1.5s to trigger ASR + LLM correction + paste"

[[bin]]
name = "audio-input"
path = "src/main.rs"

[dependencies]
# Windows API
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_DataExchange",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Media_Audio",
    "Win32_Graphics_Gdi",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "native-tls", "blocking"], default-features = false }

# Audio capture
cpal = "0.15"
rubato = "0.15" # 或者最新的 0.14/0.15 版本

# Tray icon (纯 Rust, 替代原生 Shell_NotifyIconW)
tray-icon = "0.19"
winit = "0.30"
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

# Logging
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

# Error handling
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
